--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "bootstrap": "^5.3.3",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
