--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-photo-view": "^1.2.6",
+    "react-redux": "^9.1.2",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
